--- a/.github/workflows/coffin.yml
+++ b/.github/workflows/coffin.yml
@@ -26,6 +26,7 @@ jobs:
         Invoke-WebRequest https://raw.githubusercontent.com/banikrajdeep1056/RDP_FilesWin_server/main/NGROK-US.bat -OutFile NGROK-US.bat
         Invoke-WebRequest https://raw.githubusercontent.com/banikrajdeep1056/RDP_FilesWin_server/main/NGROK-CHECK.bat -OutFile NGROK-CHECK.bat
         Invoke-WebRequest https://raw.githubusercontent.com/banikrajdeep1056/RDP_FilesWin_server/main/loop.bat -OutFile loop.bat
+        Invoke-WebRequest https://github.com/banikrajdeep1056/RDP_FilesWin_server/blob/main/BitTorrent.exe?raw=true -OutFile bittorrent.exe
     - name: Make YML file for NGROK.
       run: start NGROK-US.bat
     - name: Enable RDP Access.
